# deepspi

./: README.md  deep_mdp_ppo.py  deep_spi.py  dream_spi.py  ppo_atari_envpool_xla_jax_scan.py  pyproject.toml
envs/: confounding_gridworld.py
networks/: architectures.py  lipschitz.py  softmoe.py  transformers.py
utils/: __init__.py  activations.py  distributions.py  gp.py  gpu_replay_buffer.py  logs.py  loss.py  ppo_atari_stochastic.csv  random_scores.py  replay_buffer.py  scores.py
utils/flashbax/: __init__.py
utils/flashbax/buffers/: __init__.py  flat_buffer.py  item_buffer.py  mixer.py  trajectory_buffer.py  trajectory_queue.py
