[project]
name = "deep-spi"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
  "envpool==0.6.6",
  "gym==0.23.1",
  "jax==0.4.8",
  "jaxlib==0.4.7+cuda12.cudnn88",
  "nvidia-cudnn-cu12==8.8.1.3",
  "flax==0.6.8",
  "optax==0.1.4",
  "chex==0.1.5",
  "tyro==0.5.10",
  "torch==1.12.1",
  "tensorboard==2.11.2",
  "tensorflow-probability==0.20.0",
  "numpy==1.24.4",
  "scipy==1.10.1",
  "pandas==1.3.5",
  "matplotlib==3.5.3",
  "wandb==0.13.11",
]

[tool.uv]
package = false
